@@ -3917,7 +3917,7 @@ $ mtn log [file]
 @end multitable
 
 Unlike CVS log, monotone log can also be used without a workspace; but
-in this case you must pass a @option{--revision} argument to tell
+in this case you must pass a @option{--from} revision argument to tell
 monotone where to start displaying the log from.
 
 @heading Importing a New Project
@@ -4607,7 +4607,7 @@ Specifying only the pathname "." will restrict @command{status} to files
 changed within the current subdirectory of the workspace.
 
 @item mtn log
-@itemx mtn log [--last=@var{n}] [--next=@var{n}] [--revision=@var{id} [...]] [--to=@var{id} [...]] [--brief] [--no-merges] [--no-files] [--diffs] [@var{file} [...]]
+@itemx mtn log [--last=@var{n}] [--next=@var{n}] [--from=@var{id} [...]] [--to=@var{id} [...]] [--brief] [--no-merges] [--no-files] [--diffs] [@var{file} [...]]
 
 This command prints out a log, in reverse-ancestry order, of small
 history summaries.  Each summary contains author, date, changelog and
@@ -4625,7 +4625,11 @@ the current head revision will be given from the workspace's base
 revision in forward-ancestry order.  This is useful to review changes
 that will be applied to the workspace when @command{update} is run.
 
-if @option{--to=}@var{id} is given, log will only print entries for revisions
+If @option{--from=}@var{id} is given, the command starts tracing back through 
+history from these revisions, otherwise it starts from the base revision of 
+your workspace.
+
+If @option{--to=}@var{id} is given, log will only print entries for revisions
 that would not also be printed when logging from the revisions specified in
 @option{--to}. This is useful for reviewing changes between two points
 in history.
@@ -4639,10 +4643,6 @@ files changed in each revision.
 
 Specifying @option{--diffs} causes the log output to include a unified
 diff of the changes in each revision.
-
-If one or more revision IDs are given, the command starts tracing back
-through history from these revisions, otherwise it starts from the
-base revision of your workspace.
 
 If one or more files are given, the command will only log the revisions
 where those files are changed.
