@@ -16,7 +16,7 @@ check(mtn("commit", "-b", "testbranch", "--date=2005-08-16T03:16:05", "-m", "foo
 R2=base_revision()
 
 check(raw_mtn("--db", test.root.."/test.db", "--root", test.root,
-              "log", "--brief", "--revision", "d:2005-08-16"), 0, true, false)
+              "log", "--brief", "--from", "d:2005-08-16"), 0, true, false)
 check(qgrep(R0, "stdout"))
 check(qgrep(R1, "stdout"))
 check(qgrep(R2, "stdout"))
